--- a/index.Rmd
+++ b/index.Rmd
@@ -51,9 +51,9 @@ mode        : selfcontained # {standalone, draft}
 ### 讀入CSV
 
 至少要記得的 read.table
-\```{r}
+```{r echo=TRUE,results='markup',eval=TRUE}
 MD = read.table(file='/Volumes/AhaStorage/Project/R_ETL/data/md_bal.csv',sep=",",stringsAsFactors=F,header=T)
-\```
+```
 
 --- 
 ## Read-And-Delete
