--- a/index.Rmd
+++ b/index.Rmd
@@ -51,8 +51,8 @@ mode        : selfcontained # {standalone, draft}
 ### 讀入CSV
 
 至少要記得的 read.table
-```{r echo=TRUE,results='markup',eval=TRUE}
-MD = read.table(file='/Volumes/AhaStorage/Project/R_ETL/data/md_bal.csv',sep=",",stringsAsFactors=F,header=T)
+```{r}
+MD = read.table(file='檔案路徑',sep=",",stringsAsFactors=F,header=T)
 ```
 
 --- 
