--- a/index.Rmd
+++ b/index.Rmd
@@ -51,7 +51,7 @@ mode        : selfcontained # {standalone, draft}
 ### 讀入CSV
 
 至少要記得的 read.table
-```{r,error=TRUE}
+```{r, message=F}
 MD = read.table(file='檔案路徑',sep=",",stringsAsFactors=F,header=T)
 ```
 
