--- a/index.Rmd
+++ b/index.Rmd
@@ -55,7 +55,7 @@ mode        : selfcontained # {standalone, draft}
 ### 讀入CSV
 
 至少要記得的 `read.table`
-```{r echo=FALSE,comment=NA,results='hide'}
+```{r echo=FALSE,comment=NA,results='hold'}
 MD = read.table(file='檔案路徑',sep=",",stringsAsFactors=F,header=T)
 ```
 
