--- a/index.Rmd
+++ b/index.Rmd
@@ -116,5 +116,13 @@ install.packages("gdata")
 ### 將資料讀入
 
 ```
-Cl_info = read.table(file='檔案路徑/cl_info_other.csv',header=T,sep=",",stringsAsFactors=F)
+Cl_info = read.table(file='./cl_info_other.csv',header=T,sep=",",stringsAsFactors=F)
+```
+
+```{r}
+library(dplyr)
+Cl_info = read.table(file='/Volumes/AhaStorage/Project/R_ETL/cl_info_other.csv',header=T,sep=",",stringsAsFactors=F)
+Cl_info = mutate(Cl_info,data_dt = as.POSIXct(data_dt),bank_code = as.factor(bank_code),etl_dt = as.POSIXct(etl_dt))
+str(Cl_info)
+view(Cl_info)
 ```
