--- a/index.Rmd
+++ b/index.Rmd
@@ -120,11 +120,9 @@ install.packages("gdata")
 
 ### 將資料讀入
 
-```
-Cl_info = read.table(file='./cl_info_other.csv',header=T,sep=",",stringsAsFactors=F)
-```
 
-```{r}
+```{r collapse=TRUE}
 Cl_info = read.table(file='./cl_info_other.csv',header=T,sep=",",stringsAsFactors=F)
-str(Cl_info)
+Cl_info = mutate(Cl_info,data_dt = as.POSIXct(data_dt),bank_code = as.factor(bank_code),etl_dt = as.POSIXct(etl_dt))
+view(Cl_info)
 ```
