--- a/index.Rmd
+++ b/index.Rmd
@@ -122,6 +122,7 @@ install.packages("gdata")
 
 
 ```{r collapse=TRUE}
+library(dplyr)
 Cl_info = read.table(file='./cl_info_other.csv',header=T,sep=",",stringsAsFactors=F)
 Cl_info = mutate(Cl_info,data_dt = as.POSIXct(data_dt),bank_code = as.factor(bank_code),etl_dt = as.POSIXct(etl_dt))
 view(Cl_info)
