--- a/index.Rmd
+++ b/index.Rmd
@@ -125,5 +125,5 @@ install.packages("gdata")
 library(dplyr)
 Cl_info = read.table(file='./cl_info_other.csv',header=T,sep=",",stringsAsFactors=F)
 Cl_info = mutate(Cl_info,data_dt = as.POSIXct(data_dt),bank_code = as.factor(bank_code),etl_dt = as.POSIXct(etl_dt))
-view(Cl_info)
+View(Cl_info)
 ```
