--- a/index.Rmd
+++ b/index.Rmd
@@ -54,7 +54,7 @@ mode        : selfcontained # {standalone, draft}
 
 ## Extraction
 
-### 讀入CSV
+### 讀入資料
 
 至少要記得的 `read.table`
 ```
@@ -112,11 +112,12 @@ install.packages("gdata")
 <iframe src = 'https://survey.banking.gov.tw/statis/stmain.jsp?sys=100&funid=r100' height='600px'></iframe>
 
 ---
-## 第一步:開始收集資料
+## 開始收集資料
 
 ### 房貸餘額,直接下載現成的csv檔案
 
 - 直接到[https://raw.githubusercontent.com/ntuaha/TWFS/master/db/cl_info_other.csv](https://raw.githubusercontent.com/ntuaha/TWFS/master/db/cl_info_other.csv)下載檔案
+
 
 ### 將資料讀入
 
@@ -131,4 +132,44 @@ View(Cl_info)
 
 > - 到這裡已經完成第一次的資料`Extraction`與`Transformation`了！
 
+--- .quote
+
+<q>看見資料了!但是剛剛處理過程中的`mutate`是什麼?</q>
+
+
+--- .quote
+
+<q>看見資料了!但是剛剛處理過程中的`mutate`是什麼?</q>
+
+<q> 在`R`中用來做__資料清理__與__資料處理__好用的套件`dplyr`其中之一的函式<q>
+
+--- 
+
+## dplyr 介紹 - select
+
+### `select` 函式，用來挑選欄位
+```
+Cl_info_part = select(Cl_info,date_dt,bank_nm,mortgage_bal)
+```
+- 輸出data frame
+- 第一個參數為輸入的data frame
+- 後續參數為選取的欄位名稱
+
 ---
+
+## dplyr 介紹 - filter
+
+### `filter` 函式，用來保留要留下的資料列
+
+```
+Cl_info_part2 = filter(Cl_info,mortgage_bal>1000000)
+```
+
+- 輸出data frame
+- 第一個參數為輸入的data frame
+- 第二個參數為邏輯運算式，可用data frame裡的欄位，當結為`True`時，該筆資料列保留
+
+---
+
+
+## dplyr 介紹 - mutate
