--- a/index.Rmd
+++ b/index.Rmd
@@ -306,11 +306,10 @@ GDP = read.table(file='檔案位置',sep=",",stringsAsFactors=F,header=F)
 <iframe src = './resources/figures/R_ETL_1.svg' height='600px'></iframe>
 
 
---- &twocol w1:40% w2:60%
+--- &twocol
 
-## 一步一步來(1/3) - 去除雜訊資料列
+## 一步一步來(1/3) 
 
-*** =left
 ### 去除前後不相干的資料列
 
 ```
@@ -327,16 +326,11 @@ colnames(GDP_part2) = c("time","GDP","GDP_yoy"
 ```
 
 
-*** =right
 
-<iframe src = './resources/figures/R_ETL_1.svg' height='600px'></iframe>
+--- &twocol 
 
+## 一步一步來(2/3)
 
---- &twocol w1:40% w2:60%
-
-## 一步一步來(2/3) - 轉換資料格式
-
-*** =left
 ### 轉移文字格式
 
 ```
@@ -345,10 +339,8 @@ GDP_part3= mutate(GDP_part2,GDP = as.numeric(gsub(",", "",GDP))*1000000)
 
 ```
 
-*** =right
-
-<iframe src = './resources/figures/R_ETL_1.svg' height='600px'></iframe>
-
+1. 我們利用了 `gsub`, 替換字元，將原先有問題的`,`去除
+2. 而後利用了`as.numeric` 將原來的`文字`形態改成`數字`
 
 
 
