--- a/index.Rmd
+++ b/index.Rmd
@@ -288,15 +288,14 @@ GDP = read.table(file='檔案位置',sep=",",stringsAsFactors=F,header=F)
 
 --- .quote
 
-<q></q>
-<iframe src = './resources/figures/R_ETL_2.svg' height='100px'></iframe>
+<img src = './resources/figures/R_ETL_2.svg' height='100px'></img>
 
 
 
 --- .quote
 
-<q></q>
-<iframe src = './resources/figures/R_ETL_2.svg' height='100px'></iframe>
+
+<img src = './resources/figures/R_ETL_2.svg' height='100px'></img>
 
 <q>好亂，我想整理好這個data frome</q>
 
