--- a/index.Rmd
+++ b/index.Rmd
@@ -286,18 +286,19 @@ GDP = read.table(file='檔案位置',sep=",",stringsAsFactors=F,header=F)
 <q>輸入`View(GDP)`觀察`GDP`會發現怎麼前後有很多列的資料是不要的</q>
 
 
---- 
+--- .quote
 
+<q></q>
 <img src = './resources/figures/R_ETL_2.svg' ></img>
 
 
 
---- 
+--- .quote
 
-
+<q></q>
 <img src = './resources/figures/R_ETL_2.svg' ></img>
 
-### 好亂，我想整理好這個data frome
+### 好亂，我想`整理`好這個data frome
 
 --- &twocol w1:40% w2:60%
 
