--- a/index.Rmd
+++ b/index.Rmd
@@ -312,7 +312,9 @@ GDP = read.table(file='檔案位置',sep=",",stringsAsFactors=F,header=F)
 
  1. 去除前後不相干的資料列
  2. 轉換某些欄位的格式
- 3. 將單位轉換，從**百萬元變成元**
+   - 將單位轉換，從**百萬元變成元**
+   - 將不應該出現的,去除
+ 3. 將需要的時間資料抽離出來
 
 *** =right
 
