--- a/index.Rmd
+++ b/index.Rmd
@@ -392,8 +392,8 @@ GDP_part5 = select(GDP_part4,year,season,GDP)
 
 ## dplyr 介紹 - group_by, summarise
 
-### `group_by` 用來將資料包裝成一組，做後續的`彙總
-### `summarise`則用來做後續的各類彙總操作
+### `group_by` 用來將資料`包裝成一組`，做後續的彙總
+### `summarise`則用來做後續的各類`彙總操作`
 
 ```
 Cl_info_part6 = group_by(Cl_info_part5,data_dt) #先匯總
@@ -435,6 +435,22 @@ select sum(mortgage_bal) as mortage_total_bal from Cl_info group by time ;
  - IQR   就是IQR  ＃待驗證
 
 ---
+
+//TODO 練習題目
+
+
+--- .quote bg:red
+
+<q>接下來比較難，真的!!!!</q>
+
+--- 
+
+## 結合表格
+
+1. cbind 用來做 `1-1`列結合
+
+
+
 
 ## 匯總處理
 
