--- a/index.Rmd
+++ b/index.Rmd
@@ -512,7 +512,7 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6),
 
 ---
 
-## left join
+## dplyr 介紹 - left_join 
 
 ### 參數`by` 指出以何欄位作為對照鍵值
 透過先前創建的`x`與`y`，以及交集的鍵值`c1`
@@ -520,18 +520,21 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6),
 ljxy = left_join(x,y,by="c1") #以X為主
 ljyx = left_join(y,x,by="c1") #以Y為主
 ```
-
 <img src="./resources/figures/R_ETL_LJXY.svg" style="height:400px"></img>
 
 
 ---
 
-## dplyr 介紹 - left_join 
+## dplyr 介紹 - inner_join, anti_join
 
-#
-
-
-
+### inner_join 取出共有的鍵值
+```{r}
+ij_xy = inner_join(x,y,by="c1")
+```
+### anti_join 取出非共有的鍵值
+```{r}
+aj_xy = anti_join(x,y,by="c1")
+```
 
 
 
