--- a/index.Rmd
+++ b/index.Rmd
@@ -543,19 +543,33 @@ anti_join(x,y,by="c1")
 anti_join(y,x,by="c1")
 ```
 
-*** =pnotes &twocol
+*** =pnotes
+回憶:
+<img src="./resources/figures/R_ETL_x.svg" ></img>
+
+
+## dplyr 介紹 - semi_join, full_join
+
 
 *** =left
+### semi_join 取出共有的鍵值
 ```{r}
-x
+semi_join(x,y,by="c1")
+```
+```{r}
+semi_join(y,x,by="c1")
 ```
 
 *** =right
 
+### full_join 取出非共有的鍵值
 ```{r}
-y
+left_join(x,y,by=NULL)
 ```
 
+*** =pnotes
+回憶:
+<img src="./resources/figures/R_ETL_x.svg" ></img>
 
 
 
