--- a/index.Rmd
+++ b/index.Rmd
@@ -544,8 +544,7 @@ anti_join(y,x,by="c1")
 ```
 
 *** =pnotes
-回憶:
-<img src="./resources/figures/R_ETL_x.svg" ></img>
+<img src="./resources/figures/R_ETL_x.svg" style="height:400px" ></img>
 
 
 ## dplyr 介紹 - semi_join, full_join
@@ -568,8 +567,8 @@ left_join(x,y,by=NULL)
 ```
 
 *** =pnotes
-回憶:
-<img src="./resources/figures/R_ETL_x.svg" ></img>
+
+<img src="./resources/figures/R_ETL_x.svg" style="height:400px" ></img>
 
 
 
