--- a/index.Rmd
+++ b/index.Rmd
@@ -528,14 +528,14 @@ ljyx = left_join(y,x,by="c1") #以Y為主
 ## dplyr 介紹 - inner_join, anti_join
 
 *** =left
-### inner_join 取出共有的鍵值
+### `inner_join` 取出共有的鍵值
 ```{r}
 inner_join(x,y,by="c1")
 ```
 
 *** =right
 
-### anti_join 取出非共有的鍵值
+### `anti_join` 取出非共有的鍵值
 ```{r}
 anti_join(x,y,by="c1")
 ```
@@ -546,13 +546,13 @@ anti_join(y,x,by="c1")
 *** =pnotes
 <img src="./resources/figures/R_ETL_x.svg" style="height:400px" ></img>
 
---- 
+--- &twocol
 
 ## dplyr 介紹 - semi_join, full_join
 
 
 *** =left
-### semi_join 取出共有的鍵值
+### `semi_join` 取出共有的鍵值
 ```{r}
 semi_join(x,y,by="c1")
 ```
@@ -562,7 +562,7 @@ semi_join(y,x,by="c1")
 
 *** =right
 
-### full_join 取出非共有的鍵值
+### `full_join` 取出非共有的鍵值
 ```{r}
 left_join(x,y,by=NULL)
 ```
