--- a/index.Rmd
+++ b/index.Rmd
@@ -548,23 +548,21 @@ anti_join(y,x,by="c1")
 
 --- &twocol
 
-## dplyr 介紹 - semi_join, full_join
+## dplyr 介紹 - semi_join
 
-
+與`left_join`的差別在，只要對應不到的鍵值就不出現
 *** =left
-### `semi_join` 取出共有的鍵值
+### `semi_join` 取出共有的鍵值,`x` 為主
 ```{r}
 semi_join(x,y,by="c1")
 ```
-```{r}
-semi_join(y,x,by="c1")
-```
+
 
 *** =right
 
-### `full_join` 取出非共有的鍵值
+### `semi_join` 取出共有的鍵值,`y` 為主
 ```{r}
-left_join(x,y,by=NULL)
+semi_join(y,x,by="c1")
 ```
 
 *** =pnotes
