--- a/index.Rmd
+++ b/index.Rmd
@@ -580,13 +580,16 @@ semi_join(y,x,by="c1")
 
 ### 請問，這兩張表該怎麼結合比較好?
 
-1. left_join(Cl_Info_part7,GDP_part5,by=data_dt)
-2. semi_join(Cl_Info_part7,GDP_part5,by=data_dt)
-3. left_join(GDP_part5,Cl_Info_part7,by=data_dt)
-4. semi_join(GDP_part5,Cl_Info_part7,by=data_dt)
+
+1. left_join Cl_Info_part7 擺左邊
+2. semi_join Cl_Info_part7 擺左邊
+3. _left_join GDP_part5 擺左邊_
+4. _semi_join GDP_part5 擺左邊_
 5. 其他
 
+*** =image
 
+<img src="./resources/figures/R_ETL_TWOTABLES.svg" style="height:400px" ></img>
 
 
 
