--- a/index.Rmd
+++ b/index.Rmd
@@ -38,7 +38,7 @@ mode        : selfcontained # {standalone, draft}
 > 3. 股市
 
 
---- .quote
+--- .vcenter
 
 <q>即便知道資料在哪，可是資料還是如同`一盤散沙`</q>
 
@@ -317,7 +317,7 @@ GDP = read.table(file='檔案位置',sep=",",stringsAsFactors=F,header=F)
 <iframe src = './resources/figures/R_ETL_1.svg' height='600px'></iframe>
 
 
---- &twocol
+--- 
 
 ## 一步一步來(1/3) 
 
@@ -373,7 +373,7 @@ GDP_part5 = select(GDP_part4,year,season,GDP)
 
 
 
---- .quote
+--- .vcenter
 
 <q>擁有了`GDP`和`房貸餘額`，那接下來我們該怎麼處理變成後續可以使用的資料呢？</a>
 
@@ -412,7 +412,7 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
 select sum(mortgage_bal) as mortage_total_bal from Cl_info group by time ;
 ```
 
---- .quote
+--- .vcenter
 
 <q>group by 可加先下也可不下，不下的情況是直對接`全部`資料做集匯總運算 </q>
 
@@ -439,7 +439,7 @@ select sum(mortgage_bal) as mortage_total_bal from Cl_info group by time ;
 //TODO 練習題目
 
 
---- .segue bg:red
+--- .vcenter bg:red
 
 ## 接下來比較難，真的!!!!
 
@@ -464,7 +464,7 @@ left_join(x,y,by=NULL,copy=FALSE)
 select x.* from x full join y ;
 ````
 
---- &twocol
+--- &twocol 
 
 ## join講解前資料準備
 
