--- a/index.Rmd
+++ b/index.Rmd
@@ -610,7 +610,7 @@ t2 = filter(t1,is.na(mortage_total_bal)==FALSE)
 <img src="./resources/figures/R_ETL_t2.svg" style="height:200px" ></img>
 
 
---- &twocol w1:20% w2:80%
+--- &twocol_dynamic w1:20% w2:80%
 
 ## 接下來我們應該做 - 畫圖
 
@@ -634,7 +634,7 @@ ggplot(see1, aes(time, ratio)) +
 
 
 
---- &twocol w1:20% w2:80%
+--- &twocol_dynamic w1:20% w2:80%
 
 ## 接下來我們應該做 - 解釋
 
@@ -652,7 +652,7 @@ ggplot(see1, aes(time, ratio)) +
   - 10年開始打房政策
   - 如果加上`房價所得比`，還可以說什麼呢?
 
---- &twocol w1:20% w2:80%
+--- &twocol_dynamic w1:20% w2:80%
 
 ## 接下來我們應該做 - 報告
 
