--- a/index.Rmd
+++ b/index.Rmd
@@ -464,7 +464,8 @@ left_join(x,y,by=NULL,copy=FALSE)
 select x.* from x full join y ;
 ````
 
---- &twocol_dynamic w1:78% w2:18%
+
+--- &twocol_dynamic w1:68% w2:28%
 
 ## join講解前資料準備
 
@@ -473,11 +474,11 @@ select x.* from x full join y ;
 先`建立資料集`
 
 ```
-x=data.frame(c1 = c(1,1,2,3,4,5,5),c2 = c('A','B','C','D','E','F','G'))
-y=data.frame(c1 = c(1,2,2,3,4,6,6), c2 = c('A','B','C','D','E','F','G'))
+x=data.frame(c1 = c(1,1,2,3,4,5,5),
+             c2 = c('A','B','C','D','E','F','G'))
+y=data.frame(c1 = c(1,2,2,3,4,6,6),
+             c2 = c('A','B','C','D','E','F','G'))
 ```
-
-打入 `View(x)`與`View(y)`應該會看見
 
 *** =right
 
@@ -487,7 +488,7 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6), c2 = c('A','B','C','D','E','F','G'))
 
 
 
---- &twocol_dynamic w1:78% w2:18%
+--- &twocol_dynamic w1:68% w2:28%
 
 ## join講解前資料準備
 
@@ -496,15 +497,17 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6), c2 = c('A','B','C','D','E','F','G'))
 先`建立資料集`
 
 ```
-x=data.frame(c1 = c(1,1,2,3,4,5,5),c2 = c('A','B','C','D','E','F','G'))
-y=data.frame(c1 = c(1,2,2,3,4,6,6), c2 = c('A','B','C','D','E','F','G'))
+x=data.frame(c1 = c(1,1,2,3,4,5,5),
+             c2 = c('A','B','C','D','E','F','G'))
+y=data.frame(c1 = c(1,2,2,3,4,6,6),
+             c2 = c('A','B','C','D','E','F','G'))
 ```
 
 打入 `View(x)`與`View(y)`應該會看見
 
 *** =right
 
-<img src="./resources/figures/R_ETL_X.png" ></img>
+<img src="./resources/figures/R_ETL_X.png" width="100%"></img>
 
 ---
 
