--- a/index.Rmd
+++ b/index.Rmd
@@ -299,7 +299,7 @@ GDP = read.table(file='檔案位置',sep=",",stringsAsFactors=F,header=F)
 
 ### 好亂，我想`整理`好這個data frome
 
---- &twocol w1:40% w2:60%
+--- &twocol_dynamic w1:40% w2:60%
 
 ## 資料清理
 
@@ -314,7 +314,7 @@ GDP = read.table(file='檔案位置',sep=",",stringsAsFactors=F,header=F)
 
 *** =right
 
-<iframe src = './resources/figures/R_ETL_1.png' height='500px'></iframe>
+<iframe src = './resources/figures/R_ETL_1.png' ></iframe>
 
 
 --- 
