--- a/index.Rmd
+++ b/index.Rmd
@@ -314,7 +314,7 @@ GDP = read.table(file='檔案位置',sep=",",stringsAsFactors=F,header=F)
 
 *** =right
 
-<iframe src = './resources/figures/R_ETL_1.png' style="height:600px"></iframe>
+<img src = './resources/figures/R_ETL_1.png' ></img>
 
 
 --- 
