--- a/index.Rmd
+++ b/index.Rmd
@@ -626,7 +626,7 @@ see1 = filter(mutate(t2,ratio =mortage_total_bal/GDP),is.na(ratio)==FALSE)
 ```{r plotChunk, message=FALSE, fig.height=5, fig.width=5}
 library(ggplot2)
 ggplot(see1, aes(time, ratio)) +
-  geom_point(aes(size = mortage_total_cnt), alpha = 1/2) +
+  geom_point(aes(size = 20), alpha = 1/2) +
   geom_smooth(method="loess") +
   scale_size_area()
 
