--- a/index.Rmd
+++ b/index.Rmd
@@ -625,7 +625,8 @@ see1 = filter(mutate(t2,ratio =mortage_total_bal/GDP),is.na(ratio)==FALSE)
 
 ```{r plotChunk, message=FALSE, fig.height=5, fig.width=8}
 library(ggplot2)
-ggplot(see1, aes(time, ratio)) +geom_smooth(method="loess") +scale_size_area()
+ggplot(see1, aes(time, ratio)) +geom_smooth(method="loess") 
+  +scale_size_area()
   +geom_point(aes(size = 20), alpha = 1/2) 
   
 ```
