--- a/index.Rmd
+++ b/index.Rmd
@@ -209,7 +209,9 @@ DF = read.table(file='檔案路徑',sep=",",stringsAsFactors=F,header=T)
 
 
 
---- .quote
+--- 
+
+## 看看讀入結果
 
 ```
 View(Cl_info)
@@ -223,7 +225,9 @@ str(Cl_info)
 <q>直接讀入是否覺得怪怪的?</q>
 
 
---- .quote
+--- 
+
+## 再看一次
 
 <img src = './resources/figures/R_ETL_EXP1.png' height="350px"></img>
 
@@ -258,13 +262,16 @@ View(Cl_info)
 
 <q> 在`R`中用來做__資料清理__與__資料處理__好用的套件`dplyr`其中之一的函式<q>
 
---- 
+--- &twocol_dynamic w1:78% w2:18%
 
 ## dplyr 介紹 - select
 
 ### `select` 函式，用來__挑選__`欄位`
+
+*** =left
+
 ```
-Cl_info_part = select(Cl_info,date_dt,bank_nm,mortgage_bal)
+Cl_demo1 = select(Cl_info,data_dt,bank_nm,mortgage_bal)
 ```
 - 輸出data frame
 - 第一個參數為輸入的data frame
@@ -276,6 +283,17 @@ Cl_info_part = select(Cl_info,date_dt,bank_nm,mortgage_bal)
 ```
 select data_dt,bank_nm,mortgage_bal from Cl_info;
 ```
+
+*** =right
+
+<img src = './resources/figures/R_ETL_DPLYR_SELECT.png' height="350px"></img>
+
+
+
+---
+
+## 看看成果
+
 
 
 
