--- a/index.Rmd
+++ b/index.Rmd
@@ -872,9 +872,23 @@ ljyx = left_join(y,x,by="c1") #以Y為主
 inner_join(x,y,by="c1")
 ```
 
+*** =pnotes
+<img src="./resources/figures/R_ETL_x.png" style="height:400px" ></img>
+
+
+--- &twocol
+
+## dplyr 介紹 - inner_join
+
+*** =left
+### `inner_join` 取出共有的鍵值
+```{r}
+inner_join(x,y,by="c1")
+```
+
 *** =right
 
-### `anti_join` 取出非共有的鍵值 (補充)
+### `anti_join` 取出非共有的鍵值 (`補充`)
 ```{r}
 anti_join(x,y,by="c1")
 ```
@@ -882,8 +896,6 @@ anti_join(x,y,by="c1")
 anti_join(y,x,by="c1")
 ```
 
-*** =pnotes
-<img src="./resources/figures/R_ETL_x.png" style="height:400px" ></img>
 
 --- &twocol
 
