--- a/index.Rmd
+++ b/index.Rmd
@@ -862,19 +862,6 @@ ljyx = left_join(y,x,by="c1") #以Y為主
 <img src="./resources/figures/R_ETL_LJXY.png" style="height:300px"></img>
 
 
---- &twocol
-
-## dplyr 介紹 - inner_join
-
-*** =left
-### `inner_join` 取出共有的鍵值
-```{r}
-inner_join(x,y,by="c1")
-```
-
-*** =pnotes
-<img src="./resources/figures/R_ETL_x.png" style="height:400px" ></img>
-
 
 --- &twocol
 
@@ -888,10 +875,22 @@ inner_join(x,y,by="c1")
 
 *** =right
 
-### `anti_join` 取出非共有的鍵值 (`補充`)
+<img src="./resources/figures/R_ETL_x.png" style="height:400px" ></img>
+
+--- &twocol
+
+## dplyr 介紹 - anti_join (`補充`)
+
+### `anti_join` 取出`非共有`的鍵值
+
+*** =left
+
 ```{r}
 anti_join(x,y,by="c1")
 ```
+
+*** =right
+
 ```{r}
 anti_join(y,x,by="c1")
 ```
@@ -899,7 +898,7 @@ anti_join(y,x,by="c1")
 
 --- &twocol
 
-## dplyr 介紹 - semi_join (補充)
+## dplyr 介紹 - semi_join (`補充`)
 
 與`left_join`的差別在，只要對應不到的鍵值就不出現
 *** =left
