--- a/index.Rmd
+++ b/index.Rmd
@@ -197,7 +197,7 @@ slides("ETL")
 
 --- 
 
-##  `ETL` 第一步
+##  ETL `第一步`
 
 <img src = './resources/figures/R_ETL_ETL_2.png' height="350px"></img>
 
@@ -515,8 +515,9 @@ select * from Cl_info order by mortage,data_dt desc ;
 
 <q>讓我們來練習抓下一個資料`GDP`</q>
 
+---
 
-##  `ETL` 第二步
+##  ETL `第二步`
 
 <img src = './resources/figures/R_ETL_ETL_2.png' height="350px"></img>
 
@@ -673,8 +674,9 @@ GDP_part4 = select(GDP_part3,year,season,GDP)
 
 ## 學習，實作，觀察 STEP3
 
+---
 
-##  `ETL` 第三步
+##  ETL `第三步`
 
 <img src = './resources/figures/R_ETL_ETL_2.png' height="350px"></img>
 
@@ -1315,9 +1317,9 @@ text(x, y, labels = row.names(t(final_tbl)), cex=.7)
 
 ## 學習，實作，觀察 STEP4
 
+---
 
-
-##  `ETL` 最後一步
+## ETL `最後一步`
 
 <img src = './resources/figures/R_ETL_ETL_2.png' height="350px"></img>
 
